update service.sh